--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -61,25 +61,25 @@
 \patchcmd{\l@subsection}{#1}{\MakeTextUppercase{#1}}{}{}
 \makeatother
 
-\input{title.tex}
+\input{title}
 
-\include{abstract}
+\input{abstract}
 
-\include{acknowledgements}
+\input{acknowledgements}
 
-\include{contents}
+\input{contents}
 
-\include{introduction}
+\input{introduction}
 
-\include{background}
+\input{background}
 
-\include{body}
+\input{body}
 
-\include{evaluation}
+\input{evaluation}
 
-\include{conclusion}
+\input{conclusion}
 
-\bibliography{bibliography} 
+\bibliography{bibliography}
 \bibliographystyle{plain}
     
 \end{document}
