--- a/Final-Report/body.tex
+++ b/Final-Report/body.tex
@@ -1,3 +1,7 @@
 \chapter{Body}
 
-Some text.
+\section{Thresholding}\label{section:thresholding}
+
+\section{Uncertainty Surface}\label{section:uncertaintysurface}
+
+\section{Next Scan Plane}\label{section:nextscanplane}
