--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -161,3 +161,11 @@
     institution = "Imperial College London and Kings College London and University of Technology, Austria",
     year        = "2015"
 }
+
+@TECHREPORT {gpureconstruction,
+    author      = "Bernhard Kainz and Markus Steinberger and Wolfgang Wein and Maria Kuklisova-Murgasova and Christina Malamateniou and Kevin Keraudren and Thomas Torsney-Weir and Mary Rutherford and Paul Aljabar and Joseph V. Hajnal and and Daniel Rueckert",
+    title       = "Fast Volume Reconstruction from Motion Corrupted Stacks of 2D Slices",
+    institution = "Imperial College London and Kings College London",
+    year        = "2015",
+    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7064742"
+}
