--- a/Final-Report/body.tex
+++ b/Final-Report/body.tex
@@ -1,7 +1,13 @@
-\chapter{Body}
+\chapter{Visualization}
 
 \section{Thresholding}\label{section:thresholding}
 
 \section{Uncertainty Surface}\label{section:uncertaintysurface}
 
 \section{Next Scan Plane}\label{section:nextscanplane}
+
+\chapter{Tool}
+
+\section{Scan Simulation}\label{section:simulatescan}
+
+\section{Reconstruction}\label{section:reconstruction}
