--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -33,12 +33,7 @@
 % Shiny Pictures
 \usepackage{graphicx}
 
-% TODO: Font
-%\renewcommand{\encodingdefault}{T1}
-%\renewcommand{\rmdefault}{custom}
-%\renewcommand{\sfdefault}{phv}
-%\renewcommand{\ttdefault}{pcr}
-%\newcommand\customfont[1]{{\usefont{T1}{custom}{m}{n} #1 }}
+% Font
 \usepackage{fontspec}
 \setmainfont{Quicksand}
 %\usepackage{unicode-math}
