Tidied up the formatting for chapter headings.

--- a/Final-Report/body.tex
+++ b/Final-Report/body.tex
@@ -9,6 +9,7 @@ The reconstruction process is also focused by using a mask to isolate the area o
 % Idea -> Implementation -> Results
 \section{Thresholding}\label{section:thresholding}
 
+\subsection*{Idea}
 The idea behind thresholding is to isolate areas in the reconstructed image within a range of uncertainty. This allows the viewer to show regions within a particular range (e.g. 0.2 to 0.5) and also lets them isolate the worst values in the volume (e.g. the worst 1$\%$).
 
 The implementation uses a filter provided by ITK to go create a binary mask which is set to 1 where the value is within the range of interest and 0 where it is not. This mask is then overlayed on top of the scan in 2D to highlight the areas within that range but it can also be viewed in 3D.
