Even better formatting.

--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -40,7 +40,7 @@
    	% Before
     {
     	\titlerule\vspace*{0.4\baselineskip}
-    	\ifnum\thechapter=0 - \else \thechapter. \fi
+    	\ifnum\thechapter=0 \hspace*{0.5em} \else \thechapter. \fi
     	\spacedallcaps
     }
     % After
