--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -1,6 +1,4 @@
-\chapter{Background}
-
-\section{Medical Imaging}
+\chapter{Background}\section{Medical Imaging}
 The field of medical imaging came into existence with the discovery of x-rays in 1895 by Wilhelm R\"{o}ntgen\cite{rontgen}. This meant that for the first time it was possible to peek into the human anatomy without having to physically open it up. This revolution came at a cost however as at the time the dangers of high doses of radiation were not understood and many of the pioneers died as a result of exposure\cite{xraydeath}.
 
 Radiology, the use of ionizing radiation to image objects, was greatly refined over the years; contrast agents were developed which made fields like angiography (imaging of blood vessels) possible\cite{infinityhistory} and the doses used were refined to dramatically decrease the associated risks. X-rays have been used successfully in medical imaging ever since and in the 70s the invention of the CT scanner allowed them to be used to produce 3D images of the body.
@@ -11,7 +9,8 @@ MRI can be used to create anatomical images by examining the varying water conte
 
 As with all medical imaging techniques the benefits and risks need to be weighed up before a scan is performed. When imaging fetuses the risks are higher than normal and so in general CT scans tend not to be used wherever possible. MRI however, like US (ultrasound), is not associated with known adverse fetal effects.\cite{pregnancyimagingguidelines}
 
-\subsection{MRI (Magnetic Resonance Imaging)\cite{howmriworks}}
+\newpage
+\section{MRI (Magnetic Resonance Imaging)}\cite{howmriworks}
 
 MRI uses a strong magnetic field and radio waves to produce images of the body. MRI can be used to produce 2D, 3D and even 4D images and has the advantage that it doesn’t use any ionizing radiation during the scanning process.
 
@@ -28,14 +27,15 @@ There are also a number of different ways of acquiring the scan. SSFSE (Single S
 
 If the contrast that can be achieved with MRI is insufficient for the imaging then a contrast agent, such as gadolinium, can be administered to enhance the quality of the image.
 
-\subsection{Fetal MRI\cite{fetalmri}}
+\subsection{Fetal MRI}\cite{fetalmri}
 
 Since MRI, like US, is a non-invasive procedure that doesn’t use ionizing radiation it is ideal for use in fetal imaging. While US remains the most common imaging modality used during pregnancy MRI has a number of advantages; in particular it has better contrast in soft tissue which allows individual organs to be better differentiated. US however remains the cheaper of the two and is unlikely to be replaced as the main fetal imaging tool in the near future.
 
 There are no known side effects associated with using MRI, however it is currently recommended to wait until the 17th or 18th WG (week of gestation) before performing MRI. This is partly a precautionary measure but also before then the size of the fetus and amount of movement limits the usefulness of the scan.
 
 \newpage
-\subsection{Super Resolution\cite{superresolution1}\cite{superresolution2}}
+\section{Super Resolution}
+\cite{superresolution1}\cite{superresolution2}
 One of the challenges with using MRI for fetal imaging is the resolution that is achievable with current scanners. A typical slice thickness when performing a scan on a fetal brain for example is 3mm, which is set to provide a good balance between resolution and noise. Comparing this to the brain, which may only be 5cm, limits the diagnostic potential.
 
 Super resolution is a technique that is designed to address this issue. The idea behind super resolution is to construct a higher resolution image by combining information from multiple lower resolution images. A similar approach is used in stereoscopic 3D where the information from two images taken from different perspectives are combined to create one 3D image.
@@ -49,7 +49,7 @@ In the case of super resolution two (or more) images are taken such that the tra
     \label{fig:superresolution}
 \end{figure}
 
-\subsubsection*{Intuitive Super Resolution Overview}
+\subsection*{Intuitive Super Resolution Overview}
 The most simple form of super resolution follows three steps:
 
 \begin{enumerate}
@@ -64,7 +64,7 @@ Once we have registered our images we then interpolate points at a higher resolu
 
 We can then take our final outputted image and apply some post-processing effects to reduce the noise or blur. For example, we could apply a Wiener filter\cite{wienerfilter}.
 
-\subsubsection*{Details}
+\subsection*{Details}
 To understand the uncertainty that is introduced we must look more closely at how it works.
 To begin with we model the process that happens when a discrete, low resolution image is taken of a continuous scene in the real world. We can express the low resolution images in terms of a perfect, non-aliased, high resolution version which, in an ideal world, we would like to recover. From the Shannon-Nyquist sampling theory an accurate representation is one that is sampled at twice the frequency of the real world signal\cite{shannonnyquist}. In our model we will assume that the resolution of our perfect image is $LN * LN$, our actual camera takes images at the resolution of $N * N$ and the scale factor between the two is $L$.
 
@@ -100,7 +100,7 @@ These matrices can be combined to give us this result, without loss of generalit
 There are a number of different processes that are used to try and reverse this process, however this detail is sufficient to understand the kind of errors or uncertainties that can arise when reconstructing MRI images.
 
 \newpage
-\subsubsection{Uncertainty in Super Resolution}
+\section{Uncertainty in Super Resolution}
 Three main types of uncertainty have been considered:
 
 \begin{enumerate}
@@ -114,7 +114,7 @@ Having three separate 'channels' of uncertainty makes visualizing it more diffic
 An aggregation of all three will be able to give a useful overview of the situation, however being able to isolate a single type of uncertainty is important as it gives the viewer an idea of what caused the reconstruction issues.
 
 \newpage
-\subsection{Singular Value Decomposition and Principal Component Analysis}
+\section{Singular Value Decomposition and Principal Component Analysis}
 SVD breaks down a matrix, $A$, into three components: $U$, $D$ and $V$.
 
 \begin{align}
@@ -166,7 +166,7 @@ We see that the eigenvalues are just the square root of the diagonal we get from
 Principal component analysis, or a slightly modified version of it, may be applicable when suggesting the next scan plane based on the uncertainty information.
 
 \newpage
-\subsection{RANSAC}
+\section{RANSAC}
 RANSAC, which stands for Random Sample Consensus, is a technique for estimating model parameters given some sample data.
 
 Consider the task of trying to fit a line to some data which contains both correct points (inliers) and noisy data (outliers). The problem with simply minimizing the sum of squared errors to all of the points is that the outliers will distort the result such that the inliers are not perfectly described by the data. Figure~\ref{fig:ransac} illustrates this task.
@@ -192,7 +192,8 @@ A number of iterations are then performed and the winning iteration is the one w
 \end{itemize}
 
 \newpage
-\subsection{Direct Volume Rendering\cite{nvidia:volumerendering}}
+\section{Direct Volume Rendering}
+\cite{nvidia:volumerendering}
 MRI is tomographic imaging technique which means that the image is acquired in slices. The resulting scan is created by combining these slices to build a 3D volume. An MRI scan is often displayed in 2D by taking each slice and displaying it, however it is also possible to take all of the slices and view the scan in 3D. One technique for doing this is direct volume rendering.
 
 Direct volume rendering is a technique for visualising 3D volumetric data which does not generate any intermediate representation. The process uses ray tracing where rays are fired into the volume and properties of light, such as colour and opacity, are modelled to render the data.
@@ -216,7 +217,7 @@ All of the samples along the ray are then combined to calculate the value of the
 NOTE: If the final opacity is greater than 0 then the colour is normalised (divided by $O$).
 
 \newpage
-\subsection{Surface Extraction}
+\section{Surface Extraction}
 Surface extraction is another technique that can be used to visualising volumetric data. Instead of visualising the data directly, as in direct volume rendering, the volume is processed to build a geometric representation which can then be rendered.
 
 This advantage of using surface extraction is that it is much cheaper computationally\cite{surfacevsvolumerendering}. There is an initial penalty where the volume data is processed to extract surfaces but once this has been completed the rendering of geometric primitives is something that can be done incredibly quickly by graphics hardware.
@@ -237,7 +238,8 @@ The marching cubes algorithm generates as a result a mesh of triangles which can
 There are some constraints associated with using surface extraction for volume visualisation. Firstly the number of primitives required to represent certain volumes may be prohibitively high. As an extreme you can imagine trying to extract surfaces from the volumetric representation of a dust cloud; in this case it would not be practical to do so and in other situations an accuracy/efficiency trade off must be found. Also, there is a certain amount of information loss with this technique, importantly the intensity values are lost.
 
 \newpage
-\subsection{Uncertainty Visualisation\cite{uncertaintyoverview}}
+\section{Uncertainty Visualisation}
+\cite{uncertaintyoverview}
 Uncertainty visualisation in a general sense tackles the problem of trying to represent the ambiguity or uncertainty in a some data or a model when visualising it.
 
 Most data visualisation techniques implicitly assume that all of the data being used is perfect and because of this create visualisations that are misleading or appear to represent with great precision a model when in fact the underlying data cannot be that sure.
@@ -284,7 +286,7 @@ This technique could be useful for illustrating the area of greatest uncertainty
 When visualising uncertainty in particular you must consider which extreme you would like to draw attention to. A lot of uncertainty visualisations draw larger attention to high uncertainty areas, for example brighter colours on a heatmap or larger error bars, but it may be the case that the viewer is interested in areas of high certainty as this is what they can draw conclusions from.
 
 \newpage
-\subsection{Labelling - didn't use this... is it worth mentioning...}
+\section{Labelling - didn't use this... is it worth mentioning...}
 One part of the project that there wasn't time to explore was Another aspect of this project will be proposing (and visualising) the next scan plane. This, and potentially other parts of the project, will involve labelling the data in some way. Work on choosing a good labelling system has been done previously and there are a number of different approaches that can be taken\cite{labelling}.
 
 \begin{figure}[h]
