Slightly less horrific.

--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -55,7 +55,7 @@
    	{-2em}
    	% Before
     {
-    	\hspace*{1em} \thesection \hspace*{0.25em} --- \hspace*{0.25em}\spacedallcaps
+    	\hspace*{1em} \thesection \hspace*{0.25em} - \spacedallcaps
     }
     % After
     []
@@ -70,7 +70,7 @@
    	{-2em}
    	% Before
     {
-    	\hspace*{1em} \thesubsection \hspace*{0.25em} --- \hspace*{0.25em}\spacedallcaps
+    	\hspace*{1em} \thesubsection \hspace*{0.25em} - \spacedallcaps
     }
     % After
     []
